--- a/frappe/translations/zh.csv
+++ b/frappe/translations/zh.csv
@@ -1551,7 +1551,7 @@ Missing parameter Kanban Board Name,缺少参数看板名称,
 Missing parameters for login,缺少参数登录,
 Models (building blocks) of the Application,该应用程序的模型（积木）,
 Modified By,修改者,
-Module,模,
+Module,模块,
 Module Def,模块定义,
 Module Name,模块名称,
 Module Not Found,模块未找到,
@@ -3406,7 +3406,7 @@ Maximum Points,最高积分,
 Maximum points allowed after multiplying points with the multiplier value\n(Note: For no limit leave this field empty or set 0),将点乘以乘数值后允许的最大点（注意：无限制，将此字段留空或设置为0）,
 Me,我,
 Mention,提到,
-Modules,模组,
+Modules,模块,
 Monthly Long,每月长,
 Naming Series,名录,
 Navigate Home,导航回家,
