--- a/frappe/locale/es.po
+++ b/frappe/locale/es.po
@@ -1850,7 +1850,7 @@ msgstr "Permitir Impresión para Borrador"
 msgid "Allow Read On All Link Options"
 msgstr "Permitir leer en todas las opciones de enlace"
 
-#. Label of the allow_rename (Check) field in DocType 'DocType'
+#. Label of the allow_reid (Check) field in DocType 'DocType'
 #: frappe/core/doctype/doctype/doctype.json
 msgid "Allow Rename"
 msgstr "Permitir Renombrar"
