--- a/frappe/locale/fr.po
+++ b/frappe/locale/fr.po
@@ -1806,7 +1806,7 @@ msgstr "Autoriser l'Impression si Brouillon"
 msgid "Allow Read On All Link Options"
 msgstr "Autoriser la lecture de toutes les options de lien"
 
-#. Label of the allow_rename (Check) field in DocType 'DocType'
+#. Label of the allow_reid (Check) field in DocType 'DocType'
 #: frappe/core/doctype/doctype/doctype.json
 msgid "Allow Rename"
 msgstr "Permettre le Renommage"
