--- a/frappe/locale/tr.po
+++ b/frappe/locale/tr.po
@@ -1899,7 +1899,7 @@ msgstr "Taslak Yazdırmaya İzin Ver"
 msgid "Allow Read On All Link Options"
 msgstr "Tüm Bağlantı Seçeneklerinde Okumaya İzin Ver"
 
-#. Label of the allow_rename (Check) field in DocType 'DocType'
+#. Label of the allow_reid (Check) field in DocType 'DocType'
 #: frappe/core/doctype/doctype/doctype.json
 msgid "Allow Rename"
 msgstr "Yeniden Adlandırmaya İzin Ver"
