--- a/frappe/locale/bs.po
+++ b/frappe/locale/bs.po
@@ -1898,7 +1898,7 @@ msgstr "Dozvoli Ispis za Nacrt"
 msgid "Allow Read On All Link Options"
 msgstr "Dozvoli Čitanje na Svim Opcijama Veze"
 
-#. Label of the allow_rename (Check) field in DocType 'DocType'
+#. Label of the allow_reid (Check) field in DocType 'DocType'
 #: frappe/core/doctype/doctype/doctype.json
 msgid "Allow Rename"
 msgstr "Dozvoli Preimenovanje"
