--- a/frappe/locale/sv.po
+++ b/frappe/locale/sv.po
@@ -1896,7 +1896,7 @@ msgstr "Tillåt Utskrift för Utkast"
 msgid "Allow Read On All Link Options"
 msgstr "Tillåt Läsning på alla Länk Alternativ"
 
-#. Label of the allow_rename (Check) field in DocType 'DocType'
+#. Label of the allow_reid (Check) field in DocType 'DocType'
 #: frappe/core/doctype/doctype/doctype.json
 msgid "Allow Rename"
 msgstr "Tillåt Ändra Namn"
