--- a/frappe/locale/bs.po
+++ b/frappe/locale/bs.po
@@ -2263,7 +2263,7 @@ msgstr "ID Aplikacije Klijenta"
 msgid "App Client Secret"
 msgstr "Tajna Aplikacije Klijenta"
 
-#. Label of the app_id (Data) field in DocType 'Google Settings'
+#. Label of the app_name (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "ID Aplikacije"
