--- a/frappe/locale/de.po
+++ b/frappe/locale/de.po
@@ -2264,7 +2264,7 @@ msgstr "App Client-ID"
 msgid "App Client Secret"
 msgstr "App Client Geheimnis"
 
-#. Label of the app_id (Data) field in DocType 'Google Settings'
+#. Label of the app_name (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "App-ID"
