--- a/frappe/locale/es.po
+++ b/frappe/locale/es.po
@@ -2215,7 +2215,7 @@ msgstr "ID de Cliente de Aplicación"
 msgid "App Client Secret"
 msgstr "Clave Secreta de Aplicación"
 
-#. Label of the app_id (Data) field in DocType 'Google Settings'
+#. Label of the app_name (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "ID de la App"
