--- a/frappe/locale/pl.po
+++ b/frappe/locale/pl.po
@@ -2091,7 +2091,7 @@ msgstr "App ID klienta"
 msgid "App Client Secret"
 msgstr "Tajny Klient App"
 
-#. Label of the app_id (Data) field in DocType 'Google Settings'
+#. Label of the app_name (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr ""
