--- a/frappe/locale/ru.po
+++ b/frappe/locale/ru.po
@@ -2078,7 +2078,7 @@ msgstr ""
 msgid "App Client Secret"
 msgstr ""
 
-#. Label of the app_id (Data) field in DocType 'Google Settings'
+#. Label of the app_name (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr ""
