--- a/frappe/locale/sv.po
+++ b/frappe/locale/sv.po
@@ -2261,7 +2261,7 @@ msgstr "App Klient ID"
 msgid "App Client Secret"
 msgstr "App Klient Hemlighet"
 
-#. Label of the app_id (Data) field in DocType 'Google Settings'
+#. Label of the app_name (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "App ID"
