--- a/frappe/locale/tr.po
+++ b/frappe/locale/tr.po
@@ -2264,7 +2264,7 @@ msgstr "Uygulama İstemci Kimliği"
 msgid "App Client Secret"
 msgstr "Uygulama İstemci Gizli Anahtarı"
 
-#. Label of the app_id (Data) field in DocType 'Google Settings'
+#. Label of the app_name (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "Uygulama Kimliği"
