--- a/frappe/locale/zh.po
+++ b/frappe/locale/zh.po
@@ -2264,7 +2264,7 @@ msgstr "应用客户端ID"
 msgid "App Client Secret"
 msgstr "应用客户端密钥"
 
-#. Label of the app_id (Data) field in DocType 'Google Settings'
+#. Label of the app_name (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "应用ID"
