fix: Chinese Simplified translations

--- a/frappe/locale/zh.po
+++ b/frappe/locale/zh.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: tiadmin\n"
 "Report-Msgid-Bugs-To: developers@frappe.io\n"
 "POT-Creation-Date: 2025-05-21 08:40+0000\n"
-"PO-Revision-Date: 2025-05-21 09:54\n"
+"PO-Revision-Date: 2025-05-21 11:50\n"
 "Last-Translator: developers@frappe.io\n"
 "Language-Team: Chinese Simplified\n"
 "MIME-Version: 1.0\n"
@@ -470,7 +470,17 @@ msgid "<h4>Email Reply Example</h4>\n\n"
 "<p>The fieldnames you can use in your email template are the fields in the document from which you are sending the email. You can find out the fields of any documents via Setup &gt; Customize Form View and selecting the document type (e.g. Sales Invoice)</p>\n\n"
 "<h4>Templating</h4>\n\n"
 "<p>Templates are compiled using the Jinja Templating Language. To learn more about Jinja, <a class=\"strong\" href=\"http://jinja.pocoo.org/docs/dev/templates/\">read this documentation.</a></p>\n"
-msgstr ""
+msgstr "<h4>电子邮件回复示例</h4>\n\n"
+"<pre>订单逾期\n\n"
+"交易 {{ id}} 已超过到期日。请采取必要操作。\n\n"
+"详情\n\n"
+"- 客户： {{ customer }}\n"
+"- 金额： {{ grand_total }}\n"
+"</pre>\n\n"
+"<h4>如何获取字段名</h4>\n\n"
+"<p>您可以在电子邮件模板中使用的字段名是发送电子邮件的文档中的字段。您可以通过设置 &gt; 自定义表单视图并选择文档类型（如销售发票）来&gt;查找任何文档的字段。</p>\n\n"
+"<h4>模板</h4>\n\n"
+"<p>模板使用 Jinja 模板语言编译。要了解有关 Jinja 的更多信息，请<a class=\"strong\" href=\"http://jinja.pocoo.org/docs/dev/templates/\">阅读此文档。</a></p>\n"
 
 #. Content of the 'html_5' (HTML) field in DocType 'Data Import'
 #: frappe/core/doctype/data_import/data_import.json
@@ -493,7 +503,19 @@ msgid "<h5>Message Example</h5>\n\n"
 "&lt;li&gt;Amount: {{ doc.grand_total }}\n"
 "&lt;/ul&gt;\n"
 "</pre>"
-msgstr ""
+msgstr "<h5>信息示例</h5>\n\n"
+"<pre>&lt;h3&gt;订单逾期&lt;/h3&gt;\n\n"
+"&lt;p&gt;交易 {{ doc.id }} 已超过到期日。请采取必要行动。&lt;/p&gt;\n\n"
+"&lt;!-- 显示最后评论 --&gt;\n"
+"{% if comments %}\n"
+"最后评论： {{ comments[-1].comment }} by {{ comments[-1].by }}\n"
+"{% endif %}\n\n"
+"&lt;h4&gt;详情&lt;/h4&gt;\n\n"
+"&lt;ul&gt;\n"
+"&lt;li&gt;客户： {{ doc.customer }}\n"
+"&lt;li&gt;金额： {{ doc.grand_total }}\n"
+"&lt;/ul&gt;\n"
+"</pre>"
 
 #. Content of the 'html_condition' (HTML) field in DocType 'Webhook'
 #: frappe/integrations/doctype/webhook/webhook.json
@@ -528,7 +550,10 @@ msgid "<p>Set context before rendering a template. Example:</p><p>\n"
 "</p><div><pre><code>\n"
 "context.project = frappe.get_doc(\"Project\", frappe.form_dict.id)\n"
 "</code></pre></div>"
-msgstr ""
+msgstr "<p>在渲染模板前设置上下文。示例</p><p>\n"
+"</p><div><pre><code>\n"
+"context.project = frappe.get_doc(\"Project\", frappe.form_dict.id)\n"
+"</code></pre></div>"
 
 #. Content of the 'JS Message' (HTML) field in DocType 'Custom HTML Block'
 #: frappe/desk/doctype/custom_html_block/custom_html_block.json
@@ -4402,7 +4427,9 @@ msgstr "为{0}配置列"
 msgid "Configure how amended documents will be named.<br>\n\n"
 "Default behaviour is to follow an amend counter which adds a number to the end of the original id indicating the amended version. <br>\n\n"
 "Default Naming will make the amended document to behave same as new documents."
-msgstr ""
+msgstr "配置修改后的文档的命名方式。<br>\n\n"
+"默认行为是遵循修改计数器，该计数器在原始名称末尾添加一个数字，表示修改后的版本。 <br>\n\n"
+"默认命名将使修改后的文档的行为与新文档相同。"
 
 #. Description of a DocType
 #: frappe/core/doctype/document_naming_settings/document_naming_settings.json
