--- a/frappe/locale/af.po
+++ b/frappe/locale/af.po
@@ -909,7 +909,7 @@ msgstr ""
 msgid "About Us"
 msgstr ""
 
-#. ID of a DocType
+#. Name of a DocType
 #: website/doctype/about_us_settings/about_us_settings.json
 msgid "About Us Settings"
 msgstr "Oor ons instellings"
@@ -920,7 +920,7 @@ msgctxt "About Us Settings"
 msgid "About Us Settings"
 msgstr "Oor ons instellings"
 
-#. ID of a DocType
+#. Name of a DocType
 #: website/doctype/about_us_team_member/about_us_team_member.json
 msgid "About Us Team Member"
 msgstr "Oor Ons Spanlid"
@@ -949,7 +949,7 @@ msgctxt "S3 Backup Settings"
 msgid "Access Key Secret"
 msgstr "Toegang tot die sleutelgeheim"
 
-#. ID of a DocType
+#. Name of a DocType
 #: core/doctype/access_log/access_log.json
 msgid "Access Log"
 msgstr "Toegangloglêer"
@@ -23429,8 +23429,8 @@ msgstr "Privaat"
 #. 'Email Account'
 #: email/doctype/email_account/email_account.json
 msgctxt "Email Account"
-msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> to send document reference"
-msgstr "ProTip: Voeg <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> om dokumentverwysing te stuur"
+msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> to send document reference"
+msgstr "ProTip: Voeg <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> om dokumentverwysing te stuur"
 
 #: core/doctype/document_naming_rule/document_naming_rule.js:22
 msgid "Proceed"
@@ -24441,7 +24441,7 @@ msgid "Reference DocType"
 msgstr "Verwysingsdokumenttipe"
 
 #: email/doctype/email_unsubscribe/email_unsubscribe.py:25
-msgid "Reference DocType and Reference ID are required"
+msgid "Reference DocType and Reference Name are required"
 msgstr "Verwysingsdokumenttipe en verwysingsnaam word vereis"
 
 #. Label of a Dynamic Link field in DocType 'Discussion Topic'
@@ -24643,67 +24643,67 @@ msgstr "Verwysings dokument tipe"
 
 #: core/doctype/communication/communication.js:152
 #: core/report/transaction_log_report/transaction_log_report.py:94
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Dynamic Link field in DocType 'Activity Log'
 #: core/doctype/activity_log/activity_log.json
 msgctxt "Activity Log"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Dynamic Link field in DocType 'Comment'
 #: core/doctype/comment/comment.json
 msgctxt "Comment"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Dynamic Link field in DocType 'Communication'
 #: core/doctype/communication/communication.json
 msgctxt "Communication"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Data field in DocType 'Data Import Log'
 #: core/doctype/data_import_log/data_import_log.json
 msgctxt "Data Import Log"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Dynamic Link field in DocType 'Email Unsubscribe'
 #: email/doctype/email_unsubscribe/email_unsubscribe.json
 msgctxt "Email Unsubscribe"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Data field in DocType 'Energy Point Log'
 #: social/doctype/energy_point_log/energy_point_log.json
 msgctxt "Energy Point Log"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Data field in DocType 'Error Log'
 #: core/doctype/error_log/error_log.json
 msgctxt "Error Log"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Dynamic Link field in DocType 'Event Participants'
 #: desk/doctype/event_participants/event_participants.json
 msgctxt "Event Participants"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Dynamic Link field in DocType 'ToDo'
 #: desk/doctype/todo/todo.json
 msgctxt "ToDo"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Dynamic Link field in DocType 'Workflow Action'
 #: workflow/doctype/workflow_action/workflow_action.json
 msgctxt "Workflow Action"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Verwysingsnaam"
 
 #. Label of a Read Only field in DocType 'Activity Log'
