--- a/frappe/locale/es.po
+++ b/frappe/locale/es.po
@@ -2231,7 +2231,7 @@ msgstr "ID de Cliente de Aplicación"
 msgid "App Client Secret"
 msgstr "Clave Secreta de Aplicación"
 
-#. Label of the app_name (Data) field in DocType 'Google Settings'
+#. Label of the app_id (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "ID de la App"
@@ -2724,7 +2724,7 @@ msgstr "Asociado a 'DocType'"
 msgid "Attached To Field"
 msgstr "Adjuntar al Campo"
 
-#. Label of the attached_to_id (Data) field in DocType 'File'
+#. Label of the attached_to_name (Data) field in DocType 'File'
 #: frappe/core/doctype/file/file.json
 msgid "Attached To Name"
 msgstr "Asociado A Nombre"
@@ -5631,7 +5631,7 @@ msgstr "Continuar"
 msgid "Contributed"
 msgstr "Contribuido"
 
-#. Label of the contribution_docid (Data) field in DocType 'Translation'
+#. Label of the contribution_docname (Data) field in DocType 'Translation'
 #: frappe/core/doctype/translation/translation.json
 msgid "Contribution Document Name"
 msgstr "Nombre del documento de contribución"
@@ -7727,10 +7727,10 @@ msgstr "El nombre de los Doctype está limitado a {0} caracteres ({1})"
 msgid "Doctype required"
 msgstr "Doctype Requerido"
 
-#. Label of the reference_id (Data) field in DocType 'Milestone'
+#. Label of the reference_name (Data) field in DocType 'Milestone'
 #. Label of the document (Dynamic Link) field in DocType 'Audit Trail'
 #. Option for the 'Show in Module Section' (Select) field in DocType 'DocType'
-#. Label of the docid (Dynamic Link) field in DocType 'Permission Inspector'
+#. Label of the docname (Dynamic Link) field in DocType 'Permission Inspector'
 #. Label of the document (Link) field in DocType 'Notification Subscribed
 #. Document'
 #: frappe/automation/doctype/milestone/milestone.json
@@ -7762,7 +7762,7 @@ msgstr "Seguir documento"
 msgid "Document Follow Notification"
 msgstr "Notificación de seguimiento de documento"
 
-#. Label of the document_id (Data) field in DocType 'Notification Log'
+#. Label of the document_name (Data) field in DocType 'Notification Log'
 #: frappe/desk/doctype/notification_log/notification_log.json
 msgid "Document Link"
 msgstr "Enlace de documento"
@@ -7797,12 +7797,12 @@ msgstr "Documento Links Row #{0}: El DocType padre es obligatorio para los enlac
 msgid "Document Links Row #{0}: Table Fieldname is mandatory for internal links"
 msgstr "Documento Links Row  #{0}: El nombre del campo de tabla es obligatorio para los enlaces internos"
 
-#. Label of the reminder_docid (Dynamic Link) field in DocType 'Reminder'
+#. Label of the reminder_docname (Dynamic Link) field in DocType 'Reminder'
 #. Label of the share_name (Dynamic Link) field in DocType 'DocShare'
-#. Label of the document_id (Data) field in DocType 'Transaction Log'
-#. Label of the docid (Data) field in DocType 'Version'
-#. Label of the document_id (Dynamic Link) field in DocType 'Tag Link'
-#. Label of the ref_docid (Dynamic Link) field in DocType 'Document Follow'
+#. Label of the document_name (Data) field in DocType 'Transaction Log'
+#. Label of the docname (Data) field in DocType 'Version'
+#. Label of the document_name (Dynamic Link) field in DocType 'Tag Link'
+#. Label of the ref_docname (Dynamic Link) field in DocType 'Document Follow'
 #: frappe/automation/doctype/reminder/reminder.json
 #: frappe/core/doctype/docshare/docshare.json
 #: frappe/core/doctype/transaction_log/transaction_log.json
@@ -20016,8 +20016,8 @@ msgstr "Archivos privados (MB)"
 #. Description of the 'Auto Reply Message' (Text Editor) field in DocType
 #. 'Email Account'
 #: frappe/email/doctype/email_account/email_account.json
-msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> to send document reference"
-msgstr "Protip: Agregar <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> enviar referencia del documento"
+msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> to send document reference"
+msgstr "Protip: Agregar <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> enviar referencia del documento"
 
 #: frappe/core/doctype/document_naming_rule/document_naming_rule.js:22
 msgid "Proceed"
@@ -20837,7 +20837,7 @@ msgstr "Fecha de referencia"
 msgid "Reference Datetime"
 msgstr "Fecha de referencia"
 
-#. Label of the reference_id (Data) field in DocType 'Email Queue'
+#. Label of the reference_name (Data) field in DocType 'Email Queue'
 #: frappe/email/doctype/email_queue/email_queue.json
 msgid "Reference DocName"
 msgstr "DocName de referencia"
@@ -20850,11 +20850,11 @@ msgid "Reference DocType"
 msgstr "DocType de referencia"
 
 #: frappe/email/doctype/email_unsubscribe/email_unsubscribe.py:26
-msgid "Reference DocType and Reference ID are required"
+msgid "Reference DocType and Reference Name are required"
 msgstr "'DocType' de referencia y nombre referencia son requeridos"
 
-#. Label of the ref_docid (Dynamic Link) field in DocType 'Submission Queue'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Discussion
+#. Label of the ref_docname (Dynamic Link) field in DocType 'Submission Queue'
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Discussion
 #. Topic'
 #: frappe/core/doctype/submission_queue/submission_queue.json
 #: frappe/website/doctype/discussion_topic/discussion_topic.json
@@ -20887,9 +20887,9 @@ msgstr "Referencia a 'DocType'"
 msgid "Reference Document"
 msgstr "Documento de referencia"
 
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Document
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Document
 #. Share Key'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Integration
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Integration
 #. Request'
 #: frappe/core/doctype/document_share_key/document_share_key.json
 #: frappe/integrations/doctype/integration_request/integration_request.json
@@ -20939,15 +20939,15 @@ msgstr "Referencia Nombre del documento"
 msgid "Reference Document Type"
 msgstr "Tipo de Documento de Referencia"
 
-#. Label of the reference_id (Dynamic Link) field in DocType 'Activity Log'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Comment'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Communication'
-#. Label of the docid (Data) field in DocType 'Data Import Log'
-#. Label of the reference_id (Data) field in DocType 'Error Log'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Event
+#. Label of the reference_name (Dynamic Link) field in DocType 'Activity Log'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Comment'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Communication'
+#. Label of the docname (Data) field in DocType 'Data Import Log'
+#. Label of the reference_name (Data) field in DocType 'Error Log'
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Event
 #. Participants'
-#. Label of the reference_id (Dynamic Link) field in DocType 'ToDo'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Email
+#. Label of the reference_name (Dynamic Link) field in DocType 'ToDo'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Email
 #. Unsubscribe'
 #. Label of the reference_name (Dynamic Link) field in DocType 'Workflow
 #. Action'
@@ -20962,7 +20962,7 @@ msgstr "Tipo de Documento de Referencia"
 #: frappe/desk/doctype/todo/todo.json
 #: frappe/email/doctype/email_unsubscribe/email_unsubscribe.json
 #: frappe/workflow/doctype/workflow_action/workflow_action.json
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Nombre Referencia"
 
 #. Label of the reference_owner (Read Only) field in DocType 'Activity Log'
