--- a/frappe/locale/it.po
+++ b/frappe/locale/it.po
@@ -15869,7 +15869,7 @@ msgstr "Nome campo non valido {0}"
 
 #: core/doctype/doctype/doctype.py:1048
 msgid "Invalid fieldname '{0}' in autoname"
-msgstr "fieldname non valido &#39;{0}&#39; in autoname"
+msgstr "fieldname non valido &#39;{0}&#39; in Autoname"
 
 #: client.py:344
 msgid "Invalid file path: {0}"
@@ -23429,8 +23429,8 @@ msgstr "Privato"
 #. 'Email Account'
 #: email/doctype/email_account/email_account.json
 msgctxt "Email Account"
-msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> to send document reference"
-msgstr "PROTIP: Aggiungere <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> inviare riferimento del documento"
+msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> to send document reference"
+msgstr "PROTIP: Aggiungere <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> inviare riferimento del documento"
 
 #: core/doctype/document_naming_rule/document_naming_rule.js:22
 msgid "Proceed"
@@ -24441,7 +24441,7 @@ msgid "Reference DocType"
 msgstr "Riferimento DocType"
 
 #: email/doctype/email_unsubscribe/email_unsubscribe.py:25
-msgid "Reference DocType and Reference ID are required"
+msgid "Reference DocType and Reference Name are required"
 msgstr "Riferimento DocType e Nome Riferimento sono necessari"
 
 #. Label of a Dynamic Link field in DocType 'Discussion Topic'
@@ -24643,67 +24643,67 @@ msgstr "Riferimento Tipo di documento"
 
 #: core/doctype/communication/communication.js:152
 #: core/report/transaction_log_report/transaction_log_report.py:94
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Dynamic Link field in DocType 'Activity Log'
 #: core/doctype/activity_log/activity_log.json
 msgctxt "Activity Log"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Dynamic Link field in DocType 'Comment'
 #: core/doctype/comment/comment.json
 msgctxt "Comment"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Dynamic Link field in DocType 'Communication'
 #: core/doctype/communication/communication.json
 msgctxt "Communication"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Data field in DocType 'Data Import Log'
 #: core/doctype/data_import_log/data_import_log.json
 msgctxt "Data Import Log"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Dynamic Link field in DocType 'Email Unsubscribe'
 #: email/doctype/email_unsubscribe/email_unsubscribe.json
 msgctxt "Email Unsubscribe"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Data field in DocType 'Energy Point Log'
 #: social/doctype/energy_point_log/energy_point_log.json
 msgctxt "Energy Point Log"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Data field in DocType 'Error Log'
 #: core/doctype/error_log/error_log.json
 msgctxt "Error Log"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Dynamic Link field in DocType 'Event Participants'
 #: desk/doctype/event_participants/event_participants.json
 msgctxt "Event Participants"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Dynamic Link field in DocType 'ToDo'
 #: desk/doctype/todo/todo.json
 msgctxt "ToDo"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Dynamic Link field in DocType 'Workflow Action'
 #: workflow/doctype/workflow_action/workflow_action.json
 msgctxt "Workflow Action"
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "nome di riferimento"
 
 #. Label of a Read Only field in DocType 'Activity Log'
