--- a/frappe/locale/pl.po
+++ b/frappe/locale/pl.po
@@ -2107,7 +2107,7 @@ msgstr "App ID klienta"
 msgid "App Client Secret"
 msgstr "Tajny Klient App"
 
-#. Label of the app_name (Data) field in DocType 'Google Settings'
+#. Label of the app_id (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr ""
@@ -2600,7 +2600,7 @@ msgstr "Dołączone Do DocType"
 msgid "Attached To Field"
 msgstr "Dołączony do pola"
 
-#. Label of the attached_to_id (Data) field in DocType 'File'
+#. Label of the attached_to_name (Data) field in DocType 'File'
 #: frappe/core/doctype/file/file.json
 msgid "Attached To Name"
 msgstr "Przydzielony do nazwy"
@@ -5503,7 +5503,7 @@ msgstr ""
 msgid "Contributed"
 msgstr "Przesłany"
 
-#. Label of the contribution_docid (Data) field in DocType 'Translation'
+#. Label of the contribution_docname (Data) field in DocType 'Translation'
 #: frappe/core/doctype/translation/translation.json
 msgid "Contribution Document Name"
 msgstr "Nazwa dokumentu wkładu"
@@ -7596,10 +7596,10 @@ msgstr ""
 msgid "Doctype required"
 msgstr ""
 
-#. Label of the reference_id (Data) field in DocType 'Milestone'
+#. Label of the reference_name (Data) field in DocType 'Milestone'
 #. Label of the document (Dynamic Link) field in DocType 'Audit Trail'
 #. Option for the 'Show in Module Section' (Select) field in DocType 'DocType'
-#. Label of the docid (Dynamic Link) field in DocType 'Permission Inspector'
+#. Label of the docname (Dynamic Link) field in DocType 'Permission Inspector'
 #. Label of the document (Link) field in DocType 'Notification Subscribed
 #. Document'
 #: frappe/automation/doctype/milestone/milestone.json
@@ -7631,7 +7631,7 @@ msgstr ""
 msgid "Document Follow Notification"
 msgstr ""
 
-#. Label of the document_id (Data) field in DocType 'Notification Log'
+#. Label of the document_name (Data) field in DocType 'Notification Log'
 #: frappe/desk/doctype/notification_log/notification_log.json
 msgid "Document Link"
 msgstr "Link do dokumentu"
@@ -7666,12 +7666,12 @@ msgstr ""
 msgid "Document Links Row #{0}: Table Fieldname is mandatory for internal links"
 msgstr ""
 
-#. Label of the reminder_docid (Dynamic Link) field in DocType 'Reminder'
+#. Label of the reminder_docname (Dynamic Link) field in DocType 'Reminder'
 #. Label of the share_name (Dynamic Link) field in DocType 'DocShare'
-#. Label of the document_id (Data) field in DocType 'Transaction Log'
-#. Label of the docid (Data) field in DocType 'Version'
-#. Label of the document_id (Dynamic Link) field in DocType 'Tag Link'
-#. Label of the ref_docid (Dynamic Link) field in DocType 'Document Follow'
+#. Label of the document_name (Data) field in DocType 'Transaction Log'
+#. Label of the docname (Data) field in DocType 'Version'
+#. Label of the document_name (Dynamic Link) field in DocType 'Tag Link'
+#. Label of the ref_docname (Dynamic Link) field in DocType 'Document Follow'
 #: frappe/automation/doctype/reminder/reminder.json
 #: frappe/core/doctype/docshare/docshare.json
 #: frappe/core/doctype/transaction_log/transaction_log.json
@@ -19881,8 +19881,8 @@ msgstr ""
 #. Description of the 'Auto Reply Message' (Text Editor) field in DocType
 #. 'Email Account'
 #: frappe/email/doctype/email_account/email_account.json
-msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> to send document reference"
-msgstr "Protip: Dodaj <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> , aby wysłać dokument odniesienia"
+msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> to send document reference"
+msgstr "Protip: Dodaj <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> , aby wysłać dokument odniesienia"
 
 #: frappe/core/doctype/document_naming_rule/document_naming_rule.js:22
 msgid "Proceed"
@@ -20702,7 +20702,7 @@ msgstr ""
 msgid "Reference Datetime"
 msgstr ""
 
-#. Label of the reference_id (Data) field in DocType 'Email Queue'
+#. Label of the reference_name (Data) field in DocType 'Email Queue'
 #: frappe/email/doctype/email_queue/email_queue.json
 msgid "Reference DocName"
 msgstr "Referencyjna nazwa DocName"
@@ -20715,11 +20715,11 @@ msgid "Reference DocType"
 msgstr "Odniesienie do DocType"
 
 #: frappe/email/doctype/email_unsubscribe/email_unsubscribe.py:26
-msgid "Reference DocType and Reference ID are required"
+msgid "Reference DocType and Reference Name are required"
 msgstr ""
 
-#. Label of the ref_docid (Dynamic Link) field in DocType 'Submission Queue'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Discussion
+#. Label of the ref_docname (Dynamic Link) field in DocType 'Submission Queue'
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Discussion
 #. Topic'
 #: frappe/core/doctype/submission_queue/submission_queue.json
 #: frappe/website/doctype/discussion_topic/discussion_topic.json
@@ -20752,9 +20752,9 @@ msgstr ""
 msgid "Reference Document"
 msgstr ""
 
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Document
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Document
 #. Share Key'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Integration
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Integration
 #. Request'
 #: frappe/core/doctype/document_share_key/document_share_key.json
 #: frappe/integrations/doctype/integration_request/integration_request.json
@@ -20804,15 +20804,15 @@ msgstr ""
 msgid "Reference Document Type"
 msgstr ""
 
-#. Label of the reference_id (Dynamic Link) field in DocType 'Activity Log'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Comment'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Communication'
-#. Label of the docid (Data) field in DocType 'Data Import Log'
-#. Label of the reference_id (Data) field in DocType 'Error Log'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Event
+#. Label of the reference_name (Dynamic Link) field in DocType 'Activity Log'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Comment'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Communication'
+#. Label of the docname (Data) field in DocType 'Data Import Log'
+#. Label of the reference_name (Data) field in DocType 'Error Log'
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Event
 #. Participants'
-#. Label of the reference_id (Dynamic Link) field in DocType 'ToDo'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Email
+#. Label of the reference_name (Dynamic Link) field in DocType 'ToDo'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Email
 #. Unsubscribe'
 #. Label of the reference_name (Dynamic Link) field in DocType 'Workflow
 #. Action'
@@ -20827,7 +20827,7 @@ msgstr ""
 #: frappe/desk/doctype/todo/todo.json
 #: frappe/email/doctype/email_unsubscribe/email_unsubscribe.json
 #: frappe/workflow/doctype/workflow_action/workflow_action.json
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr ""
 
 #. Label of the reference_owner (Read Only) field in DocType 'Activity Log'
