--- a/frappe/locale/sr_CS.po
+++ b/frappe/locale/sr_CS.po
@@ -2280,7 +2280,7 @@ msgstr "ID klijenta aplikacije"
 msgid "App Client Secret"
 msgstr "Tajni ključ klijenta aplikacije"
 
-#. Label of the app_name (Data) field in DocType 'Google Settings'
+#. Label of the app_id (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "ID aplikacije"
@@ -2773,7 +2773,7 @@ msgstr "Priloženo uz DocType"
 msgid "Attached To Field"
 msgstr "Priloženo uz polje"
 
-#. Label of the attached_to_id (Data) field in DocType 'File'
+#. Label of the attached_to_name (Data) field in DocType 'File'
 #: frappe/core/doctype/file/file.json
 msgid "Attached To Name"
 msgstr "Priloženo uz naziv"
@@ -7811,7 +7811,7 @@ msgstr "Praćenje dokumenta"
 msgid "Document Follow Notification"
 msgstr "Obaveštenje o praćenju dokumenta"
 
-#. Label of the document_id (Data) field in DocType 'Notification Log'
+#. Label of the document_name (Data) field in DocType 'Notification Log'
 #: frappe/desk/doctype/notification_log/notification_log.json
 msgid "Document Link"
 msgstr "Link dokumenta"
@@ -7848,9 +7848,9 @@ msgstr "Red povezanih dokumenata #{0}: Naziv polja tabele je obavezno za interne
 
 #. Label of the reminder_docname (Dynamic Link) field in DocType 'Reminder'
 #. Label of the share_name (Dynamic Link) field in DocType 'DocShare'
-#. Label of the document_id (Data) field in DocType 'Transaction Log'
+#. Label of the document_name (Data) field in DocType 'Transaction Log'
 #. Label of the docname (Data) field in DocType 'Version'
-#. Label of the document_id (Dynamic Link) field in DocType 'Tag Link'
+#. Label of the document_name (Dynamic Link) field in DocType 'Tag Link'
 #. Label of the ref_docname (Dynamic Link) field in DocType 'Document Follow'
 #: frappe/automation/doctype/reminder/reminder.json
 #: frappe/core/doctype/docshare/docshare.json
