--- a/frappe/locale/tr.po
+++ b/frappe/locale/tr.po
@@ -2280,7 +2280,7 @@ msgstr "Uygulama İstemci Kimliği"
 msgid "App Client Secret"
 msgstr "Uygulama İstemci Gizli Anahtarı"
 
-#. Label of the app_name (Data) field in DocType 'Google Settings'
+#. Label of the app_id (Data) field in DocType 'Google Settings'
 #: frappe/integrations/doctype/google_settings/google_settings.json
 msgid "App ID"
 msgstr "Uygulama Kimliği"
@@ -2773,7 +2773,7 @@ msgstr "DocType'a Eklendi"
 msgid "Attached To Field"
 msgstr "İlgili Alandaki Dosya Eki"
 
-#. Label of the attached_to_id (Data) field in DocType 'File'
+#. Label of the attached_to_name (Data) field in DocType 'File'
 #: frappe/core/doctype/file/file.json
 msgid "Attached To Name"
 msgstr "İsme Bağlı"
@@ -5680,7 +5680,7 @@ msgstr "Devam et"
 msgid "Contributed"
 msgstr "Katkıda Bulunan"
 
-#. Label of the contribution_docid (Data) field in DocType 'Translation'
+#. Label of the contribution_docname (Data) field in DocType 'Translation'
 #: frappe/core/doctype/translation/translation.json
 msgid "Contribution Document Name"
 msgstr "Katkıda Bulunulan Belge Adı"
@@ -7773,10 +7773,10 @@ msgstr "Doctype adı {0} karakterleriyle sınırlıdır ({1})"
 msgid "Doctype required"
 msgstr "DocType gerekli"
 
-#. Label of the reference_id (Data) field in DocType 'Milestone'
+#. Label of the reference_name (Data) field in DocType 'Milestone'
 #. Label of the document (Dynamic Link) field in DocType 'Audit Trail'
 #. Option for the 'Show in Module Section' (Select) field in DocType 'DocType'
-#. Label of the docid (Dynamic Link) field in DocType 'Permission Inspector'
+#. Label of the docname (Dynamic Link) field in DocType 'Permission Inspector'
 #. Label of the document (Link) field in DocType 'Notification Subscribed
 #. Document'
 #: frappe/automation/doctype/milestone/milestone.json
@@ -7808,7 +7808,7 @@ msgstr "Belge Takibi"
 msgid "Document Follow Notification"
 msgstr "Belge Takip Bildirimi"
 
-#. Label of the document_id (Data) field in DocType 'Notification Log'
+#. Label of the document_name (Data) field in DocType 'Notification Log'
 #: frappe/desk/doctype/notification_log/notification_log.json
 msgid "Document Link"
 msgstr "Belge Bağlantısı"
@@ -7843,12 +7843,12 @@ msgstr "Belge Bağlantıları Satırı #{0}: Dahili bağlantılar için Üst Doc
 msgid "Document Links Row #{0}: Table Fieldname is mandatory for internal links"
 msgstr ""
 
-#. Label of the reminder_docid (Dynamic Link) field in DocType 'Reminder'
+#. Label of the reminder_docname (Dynamic Link) field in DocType 'Reminder'
 #. Label of the share_name (Dynamic Link) field in DocType 'DocShare'
-#. Label of the document_id (Data) field in DocType 'Transaction Log'
-#. Label of the docid (Data) field in DocType 'Version'
-#. Label of the document_id (Dynamic Link) field in DocType 'Tag Link'
-#. Label of the ref_docid (Dynamic Link) field in DocType 'Document Follow'
+#. Label of the document_name (Data) field in DocType 'Transaction Log'
+#. Label of the docname (Data) field in DocType 'Version'
+#. Label of the document_name (Dynamic Link) field in DocType 'Tag Link'
+#. Label of the ref_docname (Dynamic Link) field in DocType 'Document Follow'
 #: frappe/automation/doctype/reminder/reminder.json
 #: frappe/core/doctype/docshare/docshare.json
 #: frappe/core/doctype/transaction_log/transaction_log.json
@@ -20061,8 +20061,8 @@ msgstr "Özel Dosyalar (MB)"
 #. Description of the 'Auto Reply Message' (Text Editor) field in DocType
 #. 'Email Account'
 #: frappe/email/doctype/email_account/email_account.json
-msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_id }}</code> to send document reference"
-msgstr "İpucu: Belge referansını göndermek için Referans: {{ reference_doctype }} {{ reference_id }} ekleyin."
+msgid "ProTip: Add <code>Reference: {{ reference_doctype }} {{ reference_name }}</code> to send document reference"
+msgstr "İpucu: Belge referansını göndermek için Referans: {{ reference_doctype }} {{ reference_name }} ekleyin."
 
 #: frappe/core/doctype/document_naming_rule/document_naming_rule.js:22
 msgid "Proceed"
@@ -20882,7 +20882,7 @@ msgstr "Referans Tarihi"
 msgid "Reference Datetime"
 msgstr "Referans Tarihi"
 
-#. Label of the reference_id (Data) field in DocType 'Email Queue'
+#. Label of the reference_name (Data) field in DocType 'Email Queue'
 #: frappe/email/doctype/email_queue/email_queue.json
 msgid "Reference DocName"
 msgstr "Referans DocName"
@@ -20895,11 +20895,11 @@ msgid "Reference DocType"
 msgstr "Referans DocType"
 
 #: frappe/email/doctype/email_unsubscribe/email_unsubscribe.py:26
-msgid "Reference DocType and Reference ID are required"
+msgid "Reference DocType and Reference Name are required"
 msgstr "Referans DocType ve Referans Adı zorunludur"
 
-#. Label of the ref_docid (Dynamic Link) field in DocType 'Submission Queue'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Discussion
+#. Label of the ref_docname (Dynamic Link) field in DocType 'Submission Queue'
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Discussion
 #. Topic'
 #: frappe/core/doctype/submission_queue/submission_queue.json
 #: frappe/website/doctype/discussion_topic/discussion_topic.json
@@ -20932,9 +20932,9 @@ msgstr "Referans Belge Türü"
 msgid "Reference Document"
 msgstr "Referans Belgesi"
 
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Document
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Document
 #. Share Key'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Integration
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Integration
 #. Request'
 #: frappe/core/doctype/document_share_key/document_share_key.json
 #: frappe/integrations/doctype/integration_request/integration_request.json
@@ -20984,15 +20984,15 @@ msgstr "Referans Döküman Adı"
 msgid "Reference Document Type"
 msgstr "Referans Belge Türü"
 
-#. Label of the reference_id (Dynamic Link) field in DocType 'Activity Log'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Comment'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Communication'
-#. Label of the docid (Data) field in DocType 'Data Import Log'
-#. Label of the reference_id (Data) field in DocType 'Error Log'
-#. Label of the reference_docid (Dynamic Link) field in DocType 'Event
+#. Label of the reference_name (Dynamic Link) field in DocType 'Activity Log'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Comment'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Communication'
+#. Label of the docname (Data) field in DocType 'Data Import Log'
+#. Label of the reference_name (Data) field in DocType 'Error Log'
+#. Label of the reference_docname (Dynamic Link) field in DocType 'Event
 #. Participants'
-#. Label of the reference_id (Dynamic Link) field in DocType 'ToDo'
-#. Label of the reference_id (Dynamic Link) field in DocType 'Email
+#. Label of the reference_name (Dynamic Link) field in DocType 'ToDo'
+#. Label of the reference_name (Dynamic Link) field in DocType 'Email
 #. Unsubscribe'
 #. Label of the reference_name (Dynamic Link) field in DocType 'Workflow
 #. Action'
@@ -21007,7 +21007,7 @@ msgstr "Referans Belge Türü"
 #: frappe/desk/doctype/todo/todo.json
 #: frappe/email/doctype/email_unsubscribe/email_unsubscribe.json
 #: frappe/workflow/doctype/workflow_action/workflow_action.json
-msgid "Reference ID"
+msgid "Reference Name"
 msgstr "Referans Adı"
 
 #. Label of the reference_owner (Read Only) field in DocType 'Activity Log'
